# py-horned-owl

./: .gitignore  .readthedocs.yaml  CITATION.cff  Cargo.toml  Makefile  README.md  build.rs  build_doc.py  gen_pyi.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yaml  build.yml  build_manylinux.yml  build_windows_and_macos.yml  docs.yaml  release.yaml
docs/: TestOntoPyLibs.ipynb  requirements.txt
docs/source/: api.rst  conf.py  custom_doc.py  details.rst  index.rst  installation.rst  performance.rst  quickstart.rst  reasoner.rst  usage.rst
docs/source/_templates/autosummary/: class.rst  module.rst
examples/: TestingPyO3.ipynb  test_python.py  test_python2.py  test_python3.py
lib/reasoner/: Cargo.toml
lib/reasoner/src/: lib.rs
libs/py-horned-owl-macros/: Cargo.toml
libs/py-horned-owl-macros/src/: lib.rs
pyhornedowl/: __init__.py  __init__.pyi
pyhornedowl/model/: __init__.py  __init__.pyi
pyhornedowl/reasoner/: __init__.py  __init__.pyi
pyhornedowl/reasoning/: __init__.py  __init__.pyi
scripts/: build_doc.py  build_model.py  gen_pyi.py
src/: doc.rs  lib.rs  model.rs  model_generated.rs  model_test.rs  ontology.rs  prefix_mapping.rs  reasoner.rs  reasoning.rs  structural_reasoner.rs  wrappers.rs
template/: build_model.py  model.json  model.schema.json
template/templates/: base.jinja2  base.rs.jinja2  enum.jinja2  enum.pyi.jinja2  enum.rs.jinja2  extensions.jinja2  extensions.pyi.jinja2  extensions.rs.jinja2  header.jinja2  named-struct.jinja2  named-struct.pyi.jinja2  named-struct.rs.jinja2  static.pyi  static.rs  transparent-enum.pyi.jinja2  transparent-enum.rs.jinja2  tuple-struct.jinja2  tuple-struct.pyi.jinja2  tuple-struct.rs.jinja2
test/: TestingPyO3.ipynb  reasoner.py  simple.omn  test_base.py  test_class_expression_builder.py  test_entity_query.py  test_hierarchy.py  test_id.py  test_index.py  test_io.py  test_iri.py  test_label.py  test_label_id.py  test_modify.py  test_ontology.py  test_pattern_match.py  test_prefix.py  test_python.py  test_python2.py  test_python3.py  test_structural_reasoner.py
test/performance/: perf.py  prepare.sh
test/performance/horned-perf/: Cargo.toml
test/performance/horned-perf/src/: main.rs
test/resources/: gen.sh  prefix.ofn.raw  prefix.omn.raw  prefix.owl  prefix.owx.raw  simple.ofn  simple.ofn.raw  simple.omn  simple.omn.raw  simple.owl  simple.owl.raw  simple.owx  simple.owx.raw
