[package]
name = "py-horned-owl"
version = "1.3.0-dev1"
authors = ["Janna Hastings <j.hastings@ucl.ac.uk>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="pyhornedowl"
crate-type=["cdylib"]

[dependencies.pyo3]
version = "0.21"
features = ["abi3-py37", "extension-module", "experimental-inspect", "multiple-pymethods"]

[dependencies]
horned-owl = "^1.1"
horned-bin = "^1.1"
py-horned-owl-reasoner = { path = "lib/reasoner" }
curie = "0.1.2"
libloading = "0.8"

[profile.dev]
opt-level=3
