[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
dynamic = ["version"]
name = "py-horned-owl"
requires-python = ">=3.7"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "jinja2>=3.1.6",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "py-horned-owl",
    "sphinx>=5.3.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-rtd-theme>=2.0.0",
]
